# ffmpeg

./: .gitignore  settings.gradle
app/: CMakeLists.txt  build.gradle
app/libs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/androidTest/java/com/sjl/ffmpeg/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/sjl/ffmpeg/: DecodeActivity.java  FFmpegBaseActivity.java  MainActivity.java  TransformActivity.java
app/src/main/java/com/sjl/ffmpeg/config/: PathConfig.java
app/src/main/java/com/sjl/ffmpeg/util/: FFmpegUtil.java  FileUtil.java  IOUtil.java  PermisstionUtil.java  ToastUtil.java
app/src/main/java/com/sjl/ffmpeg/util/ffmpeg/: FFmpegUtil.java
app/src/main/res/layout/: activity_decode.xml  activity_ffmpeg_base.xml  activity_main.xml  activity_transform.xml
app/src/test/java/com/sjl/ffmpeg/: ExampleUnitTest.java
baselib/src/androidTest/java/com/sjl/baselib/: ExampleInstrumentedTest.java
baselib/src/main/: AndroidManifest.xml
baselib/src/main/java/com/sjl/baselib/config/: PathConfig.java
baselib/src/main/java/com/sjl/baselib/util/: FileUtil.java  IOUtil.java  PermisstionUtil.java  ToastUtil.java
baselib/src/test/java/com/sjl/baselib/: ExampleUnitTest.java
ffmpegcmd/: CMakeLists.txt  build.gradle
ffmpegcmd/libs/include/: config.h
ffmpegcmd/src/androidTest/java/com/sjl/ffmpegcmd/: ExampleInstrumentedTest.java
ffmpegcmd/src/main/: AndroidManifest.xml
ffmpegcmd/src/main/cpp/: cmdutils.h  ffmpeg.c  native-lib.cpp
ffmpegcmd/src/main/java/com/sjl/ffmpegcmd/: FFmpegBaseActivity.java  FFmpegCmdActivity.java  MainActivity.java
ffmpegcmd/src/main/java/com/sjl/ffmpegcmd/util/: FFmpegUtil.java
ffmpegcmd/src/main/res/layout/: activity_ffmpeg_base.xml  activity_ffmpeg_cmd.xml  activity_main.xml
ffmpegcmd/src/test/java/com/sjl/ffmpegcmd/: ExampleUnitTest.java
ffmpegdecoder/: build.gradle
ffmpegdecoder/src/androidTest/java/com/sjl/ffmpegdecoder/: ExampleInstrumentedTest.java
ffmpegdecoder/src/main/: AndroidManifest.xml
ffmpegdecoder/src/main/cpp/: cmdutils.c  native-lib.cpp
ffmpegdecoder/src/main/java/com/sjl/ffmpegdecoder/: MainActivity.java
ffmpegdecoder/src/main/java/com/sjl/ffmpegdecoder/util/: FFmpegUtil.java
ffmpegdecoder/src/main/res/layout/: activity_main.xml
ffmpegdecoder/src/test/java/com/sjl/ffmpegdecoder/: ExampleUnitTest.java
ffmpegonelib/: CMakeLists.txt  build.gradle
ffmpegonelib/src/androidTest/java/com/sjl/ffmpegonelib/: ExampleInstrumentedTest.java
ffmpegonelib/src/main/: AndroidManifest.xml
ffmpegonelib/src/main/cpp/: native-lib.cpp
ffmpegonelib/src/main/cpp/util/: log_print.h
ffmpegonelib/src/main/java/com/sjl/ffmpegonelib/: FFmpegBaseActivity.java  MainActivity.java
ffmpegonelib/src/main/java/com/sjl/ffmpegonelib/util/: FFmpegUtil.java
ffmpegonelib/src/main/res/layout/: activity_ffmpeg_base.xml  activity_main.xml
ffmpegonelib/src/main/res/values/: strings.xml
ffmpegonelib/src/test/java/com/sjl/ffmpegonelib/: ExampleUnitTest.java
ffmpegplayer/: build.gradle
ffmpegplayer/src/androidTest/java/com/sjl/ffmpegplayer/: ExampleInstrumentedTest.java
ffmpegplayer/src/main/: AndroidManifest.xml
ffmpegplayer/src/main/java/com/sjl/ffmpegplayer/: MainActivity.java  NativePlayerActivity.java
ffmpegplayer/src/main/res/layout/: activity_main.xml  activity_native_player.xml
ffmpegplayer/src/test/java/com/sjl/ffmpegplayer/: ExampleUnitTest.java
